# dots-and-circles

./: .gitignore  CMakeLists.txt  TODO.md  compile_commands.json  e.bat  game.h  kommit.bat  project.4coder  s.bat  startup.bat
Eden/: CMakeLists.txt  Makefile  eden.sln
Eden/ryoji/: CMakeLists.txt  Makefile  Makefile copy
Eden/ryoji/__cmake/: win64.cmake
Eden/ryoji/allocators/: CMakeLists.txt  allocators.sln  allocators.vcxproj  allocators.vcxproj.filters  blk.h  fallback_allocator.h  freelist_allocator.h  linear_allocator.h  log_allocator.h
Eden/ryoji/allocators/include/: freelist_allocator.h  linear_allocator.h  log_allocator.h  null_allocator.h  slab_allocator.h  stack_allocator.h
Eden/ryoji/allocators/include/zombification/: pointer.h
Eden/ryoji/allocators/test/: CMakeLists.txt  Makefile  main.cpp
Eden/ryoji/allocators/zawarudo/: predef_freelist_strategies.h
Eden/ryoji/allocators/zombification/: predef_freelist_strategies.h
Eden/ryoji/cmake/: debug_win32.cmake  debug_win32_test.cmake  debug_x64.cmake  debug_x64_test.cmake  release_win32.cmake  release_win32_test.cmake  release_x64.cmake  release_x64_test.cmake  toolchain_win32.cmake  toolchain_win32_test.cmake  toolchain_x64.cmake  toolchain_x64_test.cmake  win32.cmake  win64.cmake
Eden/ryoji/include/allocators/: segregator_allocator.h  stack_allocator.h
Eden/ryoji/math/: CMakeLists.txt  math.sln  math.vcxproj  math.vcxproj.filters  matrix.cpp  matrix.h  utils.h  vector.h
Eden/ryoji/math/include/: matrix.h  utils.h  vector.h
Eden/ryoji/math/src/: vector.cpp
Eden/ryoji/math/test/: CMakeLists.txt  main.cpp
Eden/ryoji/math/zawarudo/: constants.h
Eden/ryoji/math/zombification/: constants.h
Eden/ryoji/src/: CMakeLists.txt
Eden/ryoji/src/math/: CMakeLists.txt
Eden/ryoji/test/: CMakeLists.txt  Makefile
Eden/ryoji/test/allocators/: CMakeLists.txt
Eden/ryoji/test/cmake/: win32.cmake
Eden/ryoji/test/math/: CMakeLists.txt
Eden/ryoji/test/tests/: CMakeLists.txt
Eden/ryoji/test/tests/math/: CMakeLists.txt  main.cpp
Eden/ryoji/test/tests/utility/: main.cpp
Eden/ryoji/test/utility/: CMakeLists.txt  Makefile
Eden/ryoji/utility/include/: defer.h
Eden/ryoji/utils/: CMakeLists.txt
Eden/ryoji/utils/include/: defer.h
Eden/tests/: tests.sln
Eden/tests/ryoji-allocators/: ryoji-allocators.vcxproj  ryoji-allocators.vcxproj.filters
Eden/tests/ryoji-allocators/test/: main.cpp
Eden/tests/ryoji-math/: ryoji-math.vcxproj  ryoji-math.vcxproj.filters
Eden/tests/ryoji-utility/: main.cpp  ryoji-utility.vcxproj  ryoji-utility.vcxproj.filters
Eden/yuu/display/: ryoji-display.vcxproj  ryoji-display.vcxproj.filters
Eden/yuu/display/include/: ryoji-display.h
Eden/yuu/display/src/: glutil.h  stdwin.h
Eden/yuu/display/test/: main.cpp
Eden/yuu/utility/: sdl2_opengl_window.h
Eden/yuu/utils/: window.h
Ryoji/: Ryoji.sln
code/: '  (+241 more)
code/glad/: CMakeLists.txt
eden/ryoji/: CMakeLists.txt
eden/ryoji/include/ryoji/: either.h  expected.h  fmt.h
eden/ryoji/include/ryoji/allocators/: blk.h  fallback-allocator.h  freelist-allocator.h  linear-allocator.h  local-allocator.h  log-allocator.h  null-allocator.h  stack-allocator.h  trace-allocator.h  utils.h
eden/ryoji/include/ryoji/maths/: bitfields.h  bitwise.h  constants.h  matrices.h  utils.h  vectors.h
eden/ryoji/include/ryoji/utils/: defer.h  expected.h  reflection.h
eden/ryoji/msvc/ryoji/: ryoji.vcxproj  ryoji.vcxproj.filters
eden/ryoji/msvc/ryoji-test-allocators/: ryoji-test-allocators.vcxproj  ryoji-test-allocators.vcxproj.filters
eden/ryoji/msvc/ryoji-test-maths/: ryoji-test-maths.vcxproj  ryoji-test-maths.vcxproj.filters
eden/ryoji/msvc/ryoji-test-utils/: ryoji-test-utils.vcxproj  ryoji-test-utils.vcxproj.filters
eden/ryoji/msvc/ryoji/Debug/: ryoji.idb
eden/ryoji/src/: defer.h  either.h  expect.h  fmt.h
eden/ryoji/src/allocators/: allocator-slab.h  blk.h  fallback-allocator.h  freelist-allocator.h  heap-allocator.h  linear-allocator.h  local-allocator.h  middleware-allocator.h  null-allocator.h  segregator-allocator.h  slab-allocator.h  stack-allocator.h  stl-adapter.h  trace-allocator.h
eden/ryoji/src/maths/: bitfields.h  bitwise.h  constants.h  matrices.cpp  matrices.h  matrix.cpp  matrix.h  utils.h  vector.cpp  vector.h  vectors.cpp  vectors.h
eden/ryoji/src/utils/: etc.cpp  expected.h  fmt.h  reflection.h
eden/ryoji/test/: main.cpp  test-allocators.cpp  test-maths.cpp  test-utils.cpp
eden/ryoji/test/units/: test-allocators.cpp  test-maths.cpp  test-utils.cpp
eden/yuu/: CMakeLists.txt
eden/yuu/include/yuu/: utils.h
eden/yuu/msvc/yuu/: yuu.vcxproj  yuu.vcxproj.filters
eden/yuu/msvc/yuu-test/: yuu-test.vcxproj  yuu-test.vcxproj.filters
eden/yuu/src/: utils.cpp  utils.h
eden/yuu/src/cores/: canvas.cpp  canvas.h  window.cpp  window.h
eden/yuu/src/graphics/: canvas.cpp  canvas.h  canvases.cpp  canvases.h  errors.h  glad.c  glad.h  renderer.cpp  renderer.h  utils.cpp  utils.h  window.cpp  window.h  windows.cpp  windows.h
eden/yuu/src/input/: keyboard.cpp  keyboard.h
eden/yuu/src/inputs/: keyboard.cpp  keyboard.h
eden/yuu/src/utils/: window.cpp  window.h
eden/yuu/test/: app.cpp  app.h  input-test-scene.cpp  input-test-scene.h  main.cpp  scene.h  test.cpp
ryoji/: CMakeLists.txt
ryoji/include/ryoji/: defer.h  expect.h  fmt.h  maybe.h  reflection.h
ryoji/include/ryoji/allocators/: heap-allocator.h  middleware-allocator.h  segregator-allocator.h  slab-allocator.h  stl-adapter.h
ryoji/include/ryoji/ds/: sstring.h
ryoji/include/ryoji/maths/: bitfield.h  matrix.h  utils.h  vector.h
ryoji/src/: fmt.h  maybe.h
ryoji/src/allocators/: fallback-allocator.h  freelist-allocator.h  heap-allocator.h  linear-allocator.h  middleware-allocator.h  null-allocator.h  stack-allocator.h  stl-adapter.h  utils.h
ryoji/src/allocators/zawarudo/: pointer.h  predef-middlewares.h
ryoji/src/ds/: sstring.cpp  sstring.h
ryoji/src/maths/: bitfield.h  utils.h  vector.h
ryoji/src/maths/zawarudo/: constants.h
ryoji/test/: headers.h  main.cpp
ryoji/test/units/: test-allocators.cpp  test-ds.cpp  test-utils.cpp
(+166 files in other folders)
